load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/skylark:drake_cc.bzl", "drake_cc_binary", "drake_cc_googletest")

package(default_visibility = ["//visibility:public"])

drake_cc_binary(
    name = "unitree_g1_run",
    srcs = ["unitree_g1_run.cc"],
    data = [
        "robots/g1_description/g1_23dof.urdf",
        "robots/g1_description/meshes",
    ],
    deps = [
        "//geometry:scene_graph",
        "//multibody/parsing:parser",
        "//multibody/plant",
        "//multibody/plant:multibody_plant_config_functions",
        "//systems/analysis:simulator",
        "//systems/controllers:pid_controller",
        "//systems/framework:diagram_builder",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:matrix_gain",
        "//systems/primitives:saturation",
        "//systems/primitives:adder",
        "//visualization:visualization_config_functions",
        "@gflags",
    ],
)
drake_cc_googletest(
    name = "weld_lock_test",
    srcs = ["GTest/weld_lock_test.cc"],  # Adjust path if needed
    data = [
        "robots/g1_description/g1_23dof.urdf",
        "robots/g1_description/meshes",
    ],
    deps = [
        "//geometry:scene_graph",
        "//multibody/parsing:parser",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/controllers:pid_controller",
        "//systems/framework:diagram_builder",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:matrix_gain",
        "//systems/primitives:saturation",
        "//systems/primitives:adder",
        "//visualization:visualization_config_functions",
    ],
)

drake_cc_googletest(
    name = "state_variables_test",
    srcs = ["GTest/state_variables_test.cc"],
    data = [
        "robots/g1_description/g1_23dof.urdf",
        "robots/g1_description/meshes",
    ],
    deps = [
        "//geometry:scene_graph",
        "//multibody/parsing:parser",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/controllers:pid_controller",
        "//systems/framework:diagram_builder",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:matrix_gain",
        "//systems/primitives:saturation",
        "//systems/primitives:adder",
        "//visualization:visualization_config_functions",
    ],
)


add_lint_tests()
