load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/skylark:drake_cc.bzl", "drake_cc_binary", "drake_cc_googletest")

package(default_visibility = ["//visibility:public"])
cc_library(
    name = "walking_pattern_generator",
    hdrs = ["includes/walking_pattern_generator.h"],
    srcs = ["controllers/walking_pattern_generator.cc"],
    deps = [
        "//systems/framework:diagram_builder",
        "//systems/framework:leaf_system",
        "//systems/primitives:pass_through",
        "//systems/primitives:matrix_gain",
        "//systems/analysis:simulator",
        "//common/trajectories:piecewise_polynomial",
        "//solvers:mathematical_program",
        "//solvers:solve",
    ],
)

cc_library(
    name = "plant_helpers",
    hdrs = ["includes/plant_helpers.h"],
    srcs = ["helper/plant_helpers.cc"],
    deps = [
        "//multibody/plant",
        "//geometry:scene_graph",
        "//math", 
    ],
)
cc_library(
    name = "pd_controller",
    hdrs = ["includes/pd_controller.h"],
    srcs = ["controllers/pd_controller.cc"],
    deps = [
        "//multibody/plant",
        "//systems/controllers:inverse_dynamics",
        "//systems/controllers:pid_controller",
        "//systems/controllers:state_feedback_controller_interface",
        "//systems/framework:diagram_builder",
        "//systems/framework:leaf_system",
        "//systems/primitives:adder",
        "//systems/primitives:pass_through",
        "//systems/primitives:matrix_gain",
    ],
)

drake_cc_binary(
    name = "unitree_g1_run",
    srcs = ["unitree_g1_run.cc"],
    data = [
        "robots/g1_description/g1_23dof.urdf",
        "robots/g1_description/meshes",
    ],
    deps = [
        "//examples/unitree_g1:walking_pattern_generator",
        "//examples/unitree_g1:pd_controller", 
        "//examples/unitree_g1:plant_helpers", 
        "//geometry:scene_graph",
        "//multibody/parsing:parser",
        "//multibody/plant",
        "//multibody/plant:multibody_plant_config_functions",
        "//systems/analysis:simulator",
        "//systems/controllers:pid_controller",
        "//systems/framework:diagram_builder",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:matrix_gain",
        "//systems/primitives:saturation",
        "//systems/primitives:adder",
        "//visualization:visualization_config_functions",
        "@gflags",
    ],
)
drake_cc_googletest(
    name = "weld_lock_test",
    srcs = ["GTest/weld_lock_test.cc"],  # Adjust path if needed
    data = [
        "robots/g1_description/g1_23dof.urdf",
        "robots/g1_description/meshes",
    ],
    deps = [
        "//geometry:scene_graph",
        "//multibody/parsing:parser",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/controllers:pid_controller",
        "//systems/framework:diagram_builder",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:matrix_gain",
        "//systems/primitives:saturation",
        "//systems/primitives:adder",
        "//visualization:visualization_config_functions",
    ],
)

drake_cc_googletest(
    name = "state_variables_test",
    srcs = ["GTest/state_variables_test.cc"],
    data = [
        "robots/g1_description/g1_23dof.urdf",
        "robots/g1_description/meshes",
    ],
    deps = [
        "//geometry:scene_graph",
        "//multibody/parsing:parser",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/controllers:pid_controller",
        "//systems/framework:diagram_builder",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:matrix_gain",
        "//systems/primitives:saturation",
        "//systems/primitives:adder",
        "//visualization:visualization_config_functions",
    ],
)


add_lint_tests()
